--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta charset="utf-8">
         <!-- link the css document -->
         <link href="style.css" rel="stylesheet" type="text/css" >
+        <link href="img/test.png">
     </head>
 
     <body>
