--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
         <p>Who is your Computing Science Teacher? </br><p>Answer: <input id="answer_q4"> <span id="check4"></span></p></p>
         <hr>
 
-        <button id="result">Result</button>
+        <h3><span id="encourage"></span></h3>
+ 
+        <center><button id="result">Result</button></center>
 
     </body>
     <!-- link js document  -->
